[package]
name = "cyberfortress-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features=["macros","ws"] }
tokio = { version = "1", features=["full"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["fmt","env-filter"] }
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features=["json"] }
jsonwebtoken = "9"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
aes-gcm = "0.10"
aead = "0.5"
chrono = { version = "0.4", features=["serde"] }
zip = { version = "0.6", default-features = false, features=["deflate"] }
walkdir = "2"
lettre = { version = "0.11", default-features = false, features=["builder","smtp-transport","tokio1","tokio1-rustls-tls"] }
argon2 = "0.5"
totp-rs = "5"
data-encoding = "2.4" 
futures-util = "0.3"